--- a/RoomPlanner/main/static/main/css/test.css
+++ b/RoomPlanner/main/static/main/css/test.css
@@ -14,6 +14,15 @@ body {
   padding: o;
   box-sizing: border-box;
 }
+/* a {
+  color: white;
+} */
+.newuser {
+  text-align: center;
+  font-size: 1rem;
+  margin-top: 1rem;
+  color: #333333;
+}
 
 .logo {
   position: absolute;
@@ -29,19 +38,6 @@ input {
   width: 100%;
   font-size: 1rem;
   margin-top: 1rem;
-  padding-left: 1rem;
-}
-
-select {
-  border-radius: 0.7rem;
-  border: 1px solid #ccc; /* Добавлено свойство для рамки */
-  height: 2.4rem;
-  font-size: 1rem;
-  margin-top: 0.3rem;
-  margin-bottom: 0.7rem;
-  background-color: transparent !important;
-  appearance: none;
-  width: 100%;
   padding-left: 1rem;
 }
 
@@ -67,7 +63,6 @@ select:focus {
   width: 100%;
   height: 3.4rem;
   border: none;
-  box-shadow: none;
   color: white;
   font-size: 1rem;
   padding: 0.7rem;
