--- a/RoomPlanner/main/templates/main/registration.html
+++ b/RoomPlanner/main/templates/main/registration.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -5,25 +6,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Room Planner</title>
-    <link rel="stylesheet" href="registration.css">
+    <link rel="stylesheet" href="{% static 'main/css/test.css' %}">
 </head>
 
 <body>
-    <div class="logo"><img src="images/sv.png" alt="logo" width="97" height="76" onclick="reloadPage()"></div>
-    <div class="registration " id="registration">
-        <div><img src="images/Logo RP.png" alt="RP"></div>
+    <div class="logo"><img src="{% static 'main/img/sv.png' %}" alt="logo" width="97" height="76" onclick="reloadPage()"></div>
+    <div class="registration" id="registration">
+        <div><img src="{% static 'main/img/Logo RP.png' %}" alt="RP"></div>
         <form id="registration-form">
-            <div class="form-group">
+            <div>
                 <input type="text" id="username" name="username" placeholder="Имя пользователя" pattern = "^[А-ЯЁа-яё]+$" required autocomplete="name"> 
             </div>
-            <div class="form-group">
+            <div>
                 <input type="password" id="password" name="password" placeholder="Пароль"  autocomplete="password" >
             </div>
-            <button type="submit" class="btn-big" id="registration-link">Зарегистрироваться</button>
+            <!-- <button type="submit" class="btn-big" id="registration-link"><a href="{% url 'main' %}">Войти</a></button> -->
+            <form action="{% url 'main' %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn-big" id="registration-link">Войти</button>
+            </form>
+            
+            <div class="newuser">
+                <p>Новый пользователь? Зарегестрироваться</p>
+            </div>
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <!-- <script src="{% static 'main/js/script.js' %}"></script> -->
 </body>
 
 </html>
