--- a/RoomPlanner/main/static/main/css/main1.css
+++ b/RoomPlanner/main/static/main/css/main1.css
@@ -80,3 +80,23 @@ body {
 }
 
 
+/* Стили для логина пользователя в правом верхнем углу */
+.user-info {
+    position: absolute; /* Фиксируем в правом верхнем углу */
+    top: 40px; /* Отступ сверху */
+    right: 20px; /* Отступ справа */
+    font-size: 1rem; /* Размер шрифта */
+    color: rgb(117, 117, 117); /* Цвет текста */
+
+}
+
+.user-info p {
+    margin: 0; /* Убираем отступы */
+}
+
+a {
+    color: rgb(117, 117, 117);
+}
+a:hover {
+    color: rgb(0, 0, 0);
+}
