--- a/RoomPlanner/main/static/main/css/main.css
+++ b/RoomPlanner/main/static/main/css/main.css
@@ -49,7 +49,8 @@ body {
 }
 
 .room-card {
-    background-color: #E8E1D9;
+    background-color: #AFBFFD;
+    color: rgba(0, 0, 0, 0.3);
 }
 
 .create-card {
@@ -58,11 +59,6 @@ body {
     color: rgba(0, 0, 0, 0.3);
 }
 
-.file-browser-card {
-    background-color: #A9A9A9;
-    font-weight: bolder;
-    color: rgba(0, 0, 0, 0.3);
-}
 
 .card:hover {
     transform: translateY(-5px);
@@ -72,11 +68,13 @@ body {
 .card-title {
     font-size: 1.5rem; /* Увеличен размер текста */
     margin-top: 10px;
+    font-weight: bolder;
 }
+
 
 .card-subtitle {
     font-size: 1rem; /* Увеличен размер текста */
-    color: gray;
+    color: rgba(0, 0, 0, 0.3);
 }
 
 
